--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ form {
     color: #000;
 }
 
-.submit {
+#go {
 	display: inline-block;
 	height: 50px;
 	width: 50px;
@@ -144,8 +144,29 @@ input[type=range]:focus {
     outline: none;
 }
 
+input[type=range]:hover {
+	cursor: pointer;
+}
 
 
+#reset {
+	display: inline-block;
+	height: 40px;
+	width: 100px;
+    background-color: transparent;
+    padding: 0px;
+    border: 4px solid #b3b3b1;
+    border-radius: 10px;
+    box-shadow: none;
+    cursor: pointer;
+    outline: none;
+    text-align: center;
+    font-size: 20px;
+    font-family: monospace;
+    font-weight: 100;
+    color: #000;
+    margin: 0 0 10px 0;
+}
 
 
 
