--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,70 @@
+/*
+Reset CSS
+*/
 
-/* General styles for the page */ 
-* {
-	margin: 0;
-	padding: 0;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
+
+/*
+ * Page Styles
+ */
+
 body {
-	background-color: #D2D7D3;
-	font-family: monospace;
-	width: 960px;
+    font-family: 'PT Sans', sans-serif;
+}
+
+.wrapper {
+    margin: 2.5% auto;
     max-width: 960px;
-	margin: 0 auto;
+    min-width: 960px;
+    padding: 10px;
 }
 
 h1 {
-	margin: 25px 0 25px 0;
-	font-size: 40px;
-	text-align: center;
-}
-
-hr {
-	margin: 20px 0;
+    text-align: center;
+    font-size: 4em;
 }
 
 form {
@@ -30,65 +74,55 @@ form {
 /* Styles for  URL box */ 
 
 .url-box {
-	background-color: transparent;
 	display: inline-block;
-	height: 30px;
-	border: none;
-	border-bottom: 4px solid #b3b3b1;
-    padding: 0px 0px 0px 20px;
-    margin: 0px 0px;
-    width: 50%;
-    outline: none;
+    margin: 4% auto 2%;
     text-align: center;
-    font-size: 15px;
-    font-family: monospace;
+    width: 100%;
+    height: 3.5rem;
+    font-size: 2rem;
     font-weight: 100;
-    color: #000;
+    outline: none;
+    border: 2px solid #000;
+    box-sizing: border-box;
 }
 
-#go {
-	display: inline-block;
-	height: 50px;
-	width: 50px;
-    background-color: transparent;
-    padding: 0px;
-    border: 4px solid #b3b3b1;
-    border-radius: 50%;
-    box-shadow: none;
-    cursor: pointer;
-    outline: none;
-    text-align: center;
-    font-size: 20px;
-    font-family: monospace;
-    font-weight: 100;
+.url-box::-webkit-input-placeholder {
     color: #000;
+    opacity: 0.5;
+    font-size: 1.5rem;
+    font-weight: 100;
+    padding-top: 5px;
+}
+
+.url-box::-moz-placeholder {
+    color: #000;
+    opacity: 0.5;
+    font-size: 0.7em;
+    font-weight: 100;
+    padding-top: 5px;
 }
 
 /* Styles for image container*/
 
 #imageContainer {
-	border: 2px solid grey;
-	border-radius: 10px;
-	padding: 5px;
-	width: 65%;
-	max-width: 600px;
-	float: left;
-	margin: 20px;
+	border: 2px solid #000;
+    display: inline-block;
+    padding: 5px;
+    vertical-align: top;
+    margin-left: 1%;
+    width: 65.6%;
 }
 
 #imageContainer img {
-	border-radius: 10px;
 	width: 100%;
 }
 
 /* Styles for sliders*/
 
 .sliders {
-	float: left;
-	border: 2px solid grey;
-	border-radius: 10px;
-	margin-top: 20px;
-    margin-bottom: 20px;
+    width: 30%;
+    display: inline-block;
+	border: 2px solid #000;
 	padding-left: 10px;
 }
 
@@ -102,7 +136,7 @@ form {
 	display: inline-block;
 	margin: 10px 0 0 0;
 	width: 100px;
-	font-size: 16px;
+	font-size: 1.1rem;
 	color: #22313F;
 	text-align: left;
 	vertical-align: middle;
@@ -153,23 +187,23 @@ input[type=range]:hover {
 
 #reset {
 	display: inline-block;
-	height: 40px;
-	width: 100px;
-    background-color: transparent;
-    padding: 0px;
-    border: 4px solid #b3b3b1;
-    border-radius: 10px;
-    box-shadow: none;
+	height: 2.5rem;
+	width: 95%;
+    background-color: #22A7F0;
+    border-radius: 5px;
     cursor: pointer;
     outline: none;
-    text-align: center;
-    font-size: 20px;
-    font-family: monospace;
-    font-weight: 100;
-    color: #000;
-    margin: 0 0 10px 0;
+    font-size: 1.5rem;
+    color: #fff;
+    margin: 0 10px 10px 0px;
+    border: 2px solid transparent;
 }
 
+#reset:hover {
+    color: #22A7F0;
+    background-color: #fff;
+    border: 2px solid #22A7F0;
+}
 
 
 
